# pictochat-rs

./: Cargo.toml  build-bin.rs  embuild-hook.rs  espflash.toml  psram_conf  readme.md  rust-toolchain.toml  sdkconfig.defaults
.cargo/: config.toml
src/: main.rs  raw_wifi.rs
src/ds_local_wifi_driver/: mod.rs  packets.rs
src/pictochat_app_driver/: mod.rs  pictochat_packets.rs
