[package]
name = "pictochat-rs"
version = "0.1.0"
authors = [""]
edition = "2021"
resolver = "2"
rust-version = "1.71"
build = "embuild-hook.rs"

[profile.release]
opt-level = "s"
lto = true

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
lto = false

[features]
esp32s3 = []
default = ["all", "hal", "esp-idf-sys/native"]
native = ["esp-idf-sys/native"]
pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-svc?/embassy-time-driver"]
use-embuild = ["embuild"]
build-emudebug = ["simple_logger"]

[dependencies]
log = { version = "0.4.22", default-features = true }
lazy_static = "1.5.0"
base64 = "0.22.1"
miniz_oxide = "0.7.4"
ieee80211 = { git = "https://github.com/mjwells2002/rust-ieee80211.git" }
simple_logger = { verison = "4.1.0", optional = true }
queues = "1.1.0"
bitflags = "2.6.0"
utf16string = "0.2.0"
byteorder = "1.5.0"
rand = { version = "0.9.0-alpha.1", features = [] }
hex = "0.4.3"
bytes = "1.6.1"
serde = { version = "1.0.163", features = ["derive"] }
rmp-serde = "1.3.0"
serde_bytes = "0.11.15"

[target.xtensa-esp32s3-espidf.dependencies]
esp-idf-sys = { version = "0.35.0", default-features = true }
esp-idf-hal = { version = "0.44.0", optional = true, default-features = true }
esp-idf-svc = { version = "0.49.0", optional = true, default-features = true, features = ["experimental","alloc","std"]}
embedded-svc = { version = "0.28.0", optional = true, default-features = true }

[build-dependencies]
embuild = { version = "0.32.0", optional = false }

[target.xtensa-esp32s3-espidf.build-dependencies]
embuild = { version = "0.32.0", optional = true }

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = "^1.3.2" }

# v5.0 and master require patches due to https://github.com/esp-rs/esp-idf-template/issues/91#issuecomment-1508241327
# [patch.crates-io]
# esp-idf-sys = { git="https://github.com/esp-rs/esp-idf-sys"}
# esp-idf-hal = { git="https://github.com/esp-rs/esp-idf-hal"}
# esp-idf-svc = { git="https://github.com/esp-rs/esp-idf-svc"}
# embedded-svc = { git = "https://github.com/esp-rs/embedded-svc" }

#[package.metadata.esp-idf-sys]
#esp_idf_sdkconfig = "sdkconfig"